# recipes

./: .cookdocs.yaml  .gitignore  .lighthouserc.yml  .pyre_configuration  .style.yapf  404.html  LICENSE  README.md  _headers  go.mod  index.html  less-watch-compiler.config.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  recipe.md.gotmpl  requirements.top.txt  requirements.txt  setup.py  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  debug.yml  defender-for-devops.yml  dependency-review.yml  devskim.yml  github-deploy.yaml  github-deploy.yml  lhci.yaml  lhci.yml  png-optim.yml  pyre.yml  pysa.yml  scorecards.yml  svg-hush.yml  versioning.yml
Breakfasts/classic-eggs-benedict/: index.html
Breakfasts/fluffiest-pancakes/: index.html
hooks/: configEdit.py  cookDocs.py  cookDocsImages.py  cookLang.py  debug.py  lessCompiler.py  postSetup.py  preSetup.py  systemInfo.py
javascripts/: keepAwake.4de3a8.min.js
overrides/: main.html
recipes/: Buffalo Chicken Sandwich.cook  Buttermilk chicken tenders.cook  Fluffiest Pancakes.cook  Panda Express Orange Chicken.cook  Venezuelan Beef Liver and Onions.cook  index.md  recipe.md.gotmpl
search/: search_index.json
setupScripts/: cisystem.py  cookDocs.py  cookDocsImages.py  cookLang.py  cookdocs.py  cookdocsImages.py  cooklang.py  docs.py  lessCompiler.py  preSetup.py  preSetupCf.py
site/: _headers
stylesheets/: fullWidth.a8799e.min.css  keepAwake.9798df.min.css  theme.effab3.min.css
(+59 files in other folders)
