[project]
name = "Recipes"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "DemosJarco", email = "1209494+demosjarco@users.noreply.github.com" },
]
dependencies = [
    "distro==1.8.0",
    "ghapi==1.0.3",
    "lesscpy==0.15.0",
    "mkdocs==1.5.2",
    "mkdocs-glightbox==0.3.4",
    "mkdocs-google-translate==1.1.4",
    "mkdocs-material==9.3.2",
    "mkdocs-material[imaging]==9.3.2",
    "mkdocs-minify-plugin==0.7.1",
    "pymdown-extensions==10.4",
    "requests==2.30.0",
    "toc==0.0.10",
]


[project.optional-dependencies]
dev = ["pip-tools==7.2.0"]


[project.urls]
homepage = "https://recipes.demosjarco.dev"
repository = "https://github.com/demosjarco/recipes"
